# kuro

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.json  start-worker.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: amo_constants.py  auth.py  config.py  database.py  phone.py  redis.py
backend/app/models/: __init__.py  ami_event.py  call.py  project.py  session.py  tracking_number.py  user.py
backend/app/repositories/: call_repository.py
backend/app/schemas/: project.py  tracking.py
backend/app/scripts/: add_altel_numbers.py  demo_calls.py  seed.py
backend/app/services/: ami_client.py  ami_journal.py  amo_sync.py  amocrm.py  analytics.py  call_quality.py  lead_reopen.py  number_pool.py  pool_sync.py  recordings.py  webhook.py
backend/app/workers/: amo_poll.py  call_processor.py  number_cleanup.py  reconciliation.py
backend/asterisk/: trunks.csv.example
backend/asterisk/agi/: call_tracking.py
backend/asterisk/dialplan/: extensions_custom.conf
backend/asterisk/scripts/: generate_pjsip.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_phone_normalized_and_nullable_project.py  0003_amo_lead_id.py  0004_call_linkedid.py  0005_call_amo_fields.py  (+1 more)
backend/tests/: test_ami_journal.py  test_amocrm_interface.py  test_calc_qualified_won.py  test_cdr_upgrade_foreign_row.py  test_city_from_campaign.py  test_inbound_did_capture.py  test_open_lead_task.py  test_phone.py  test_resolve_did.py  test_retry_handle_cdr.py  test_round_robin_city.py
(+62 files in other folders)
